Fix for hero image top spacing

--- a/src/layouts/css/index.css
+++ b/src/layouts/css/index.css
@@ -175,7 +175,7 @@ p.hero-subheading {
 .hero-img {
     max-width: 100%;
     height: auto;
-    margin-top: 20vh  ;
+    margin-top: 6.5em;
 }
 
 .step-img {
